--- a/style.css
+++ b/style.css
@@ -1,30 +1,9 @@
-body{
-    display: grid;
-        justify-content: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-h1{
-    margin-bottom: 50px;
-}
-.box{
-    margin:5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
 
-button{
-    border: none;
-    padding: 6px;
-    padding-bottom: 10px;
-    border-radius: 5px;
-    background-color: rgba(0, 0, 0, 0.7);
-    width:120px;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
-    font-size: large;
-    letter-spacing: 1px;
+.flex-container{
+    display: flex;
+    flex-wrap: wrap;
 }
-a{
-    color: white;
-    text-decoration:none;
+.flex-container>button{
+    flex:1;
+    margin: 10px;
 }
