--- a/style.css
+++ b/style.css
@@ -2,8 +2,15 @@
 .flex-container{
     display: flex;
     flex-wrap: wrap;
+    justify-content:center;
+    width: 90ox;
+    height: 10px;
 }
-.flex-container>button{
-    flex:1;
+button{
+    width: 70px;
+    padding: 10px;
     margin: 10px;
+    
+    border:1px solid gainsboro;
+    border-radius: 2px;
 }
