--- a/milling/style.css
+++ b/milling/style.css
@@ -7,7 +7,7 @@
 }
 
 .card {
-  display: ;
+  display: block;
   flex: 1 1 100%;
   margin: 2px;
   z-index: 501;
@@ -71,6 +71,8 @@ input.radio{
 .box{
   /* border: 2px solid rgb(190,190 ,190);border-radius: 7px;
   padding:  5px; */
+  border:0px solid lightslategrey;
+  
 }
 
 button{
@@ -92,7 +94,27 @@ button{
   overflow:hidden;
   padding: 3px;
   margin: 10px;
+  box-shadow: 1px 1px 3px rgba(0,0,0,.4)
 }
 span{
   font-size: small;
+}
+.absalute{
+  position:fixed;
+  left: 0%;
+  top: 90%;
+  width: 95%;
+  height: 50px;
+  padding: 10px;
+  border-radius: 3px;
+  background-color:rgba(0, 0, 0, 0.7);
+  color: #fff;
+  z-index: 1px;
+}
+.footerBtn{
+  height: 30px;
+  padding: 0px;
+  margin: 15px;
+  margin-top: 0px;
+  border-radius: 10px;
 }
