--- a/test/style.css
+++ b/test/style.css
@@ -1,15 +1,17 @@
-.flex-container{ 
-    display:flex;
-    
-    background-color: lightblue;
+input{
+  width: 50px;
+  border-collapse: collapse;
+  border: 0px;
+  margin:0px;
+  padding: 0px;
+
 }
-
-.flex-item  {
-    /* main funk */
-  background-color: #f1f1f1;
-  margin: 10px;
-  padding: 20px;
-  font-size: 30px;
+tr{
+  margin:0px;
+  padding: 0px;
 }
-
-
+td{
+  border: 1px solid gainsboro;
+  margin:0px;
+  padding: 0px;
+}
