--- a/style.css
+++ b/style.css
@@ -1,16 +1,45 @@
 
+body{
+    height: 150vh;
+    background-image:linear-gradient(#334756,#000);
+    
+}
 .flex-container{
     display: flex;
     flex-wrap: wrap;
     justify-content:center;
-    width: 90ox;
-    height: 10px;
+    
+}
+h1{
+    font-family:'Permanent Marker';
+    color:#F0A500;
+    /* transform:rotatez(-30deg); */
+
 }
 button{
-    width: 70px;
-    padding: 10px;
+    width: 120px;
+    padding: 20px;
     margin: 10px;
     
-    border:1px solid gainsboro;
-    border-radius: 2px;
+    border:3px medium  #F0A500;
+    
+    border-radius: 10px;
+    z-index:3;
+    font-size: large;
+    font-weight: 800;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    color: #777;
+    background-color: #082032;
+    box-shadow: 0px 0px 5px 1px;
+}
+.bgcl{
+    background-image:linear-gradient(#082032,#082032,#000) ;
+    z-index: -1;
+    height: 100px;
+    padding:30px;
+    border-radius: 50%;   
+    overflow-y: hidden;
+    overflow-x: hidden;
+    box-shadow:0px 0px 7px 5px  #777;
+
 }
