--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body{
-    height: 150vh;
-    background-image:linear-gradient(#334756,#000);
+    height: 100vh;
+    background-image:linear-gradient(150deg,#334756,hsl(205, 18%, 13%));
     
 }
 .flex-container{
@@ -11,9 +11,13 @@ body{
     
 }
 h1{
+    margin-top: 20vh;
     font-family:'Permanent Marker';
     color:#F0A500;
-    /* transform:rotatez(-30deg); */
+    animation-name: example2;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    transform:rotatez(-10deg);border:3px medium #F0A500;
 
 }
 button{
@@ -31,15 +35,36 @@ button{
     color: #777;
     background-color: #082032;
     box-shadow: 0px 0px 5px 1px;
+  
 }
 .bgcl{
     background-image:linear-gradient(#082032,#082032,#000) ;
     z-index: -1;
-    height: 100px;
-    padding:30px;
+    padding:60px 33px;
     border-radius: 50%;   
     overflow-y: hidden;
     overflow-x: hidden;
     box-shadow:0px 0px 7px 5px  #777;
-
+    animation-name: example;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+}
+@keyframes example {
+    0%{ box-shadow: 0px 0px 7px 5px #F0A500;}
+  50% { box-shadow:0px 0px 70px 5px  #111;}
+  100%{box-shadow: 0px 0px 7px 5px  #F0A500;}
+}
+@keyframes example2 {
+    0%{color: #F0A500;}
+    5%{color: #F0A500;}
+    6%{color: #333;}
+    7%{color: #F0A500;}
+    8%{color: #333;}
+    9%{color: #F0A500;}
+    10%{color: #333;}
+    11%{color: #F0A500;}
+    12%{color: #333;}
+  40% { color:  #555;}
+  50% { color:  #555;}
+  55%{color: #F0A500;}
 }
