--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
     
 }
 h1{
-    margin-top: 20vh;
+    margin-top: 50px;
     font-family:'Permanent Marker';
     color:#F0A500;
     animation-name: example2;
@@ -21,8 +21,8 @@ h1{
 
 }
 button{
-    width: 120px;
-    padding: 20px;
+    width: 250px;
+    padding: 10px;
     margin: 10px;
     
     border:3px medium  #F0A500;
