--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 body{
-    height: 100vh;
+    offset-position: -10px;
+    height: 88vh;
     background-image:linear-gradient(150deg,#334756,hsl(205, 18%, 13%));
     
 }
@@ -11,7 +12,7 @@ body{
     
 }
 h1{
-    margin-top: 50px;
+    margin-top: 30vh;
     font-family:'Permanent Marker';
     color:#F0A500;
     animation-name: example2;
