landing page design

--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 
 body{
-    offset-position: -10px;
-    height: 88vh;
+    margin: 0px;
+    height: 100%;
+    position:fixed;
+    background-color: #334756;
     background-image:linear-gradient(150deg,#334756,hsl(205, 18%, 13%));
     
 }
@@ -12,13 +14,13 @@ body{
     
 }
 h1{
-    margin-top: 30vh;
+    margin-top: 5%;
     font-family:'Permanent Marker';
     color:#F0A500;
     animation-name: example2;
     animation-duration: 5s;
     animation-iteration-count: infinite;
-    transform:rotatez(-10deg);border:3px medium #F0A500;
+    transform:rotatez(-10deg);
 
 }
 button{
@@ -26,16 +28,16 @@ button{
     padding: 10px;
     margin: 10px;
     
-    border:3px medium  #F0A500;
+    border: 1px  solid #F0A500;
     
     border-radius: 10px;
     z-index:3;
     font-size: large;
     font-weight: 800;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: #777;
+    color: #F0A500;
     background-color: #082032;
-    box-shadow: 0px 0px 5px 1px;
+    box-shadow: 0px 0px 5px 1px #F0A500;
   
 }
 .bgcl{
@@ -45,12 +47,12 @@ button{
     border-radius: 50%;   
     overflow-y: hidden;
     overflow-x: hidden;
-    box-shadow:0px 0px 7px 5px  #777;
+    box-shadow:0px 0px 7px 5px  #F0A500;
     animation-name: example;
     animation-duration: 5s;
     animation-iteration-count: infinite;
 }
-@keyframes example {
+/* @keyframes example {
     0%{ box-shadow: 0px 0px 7px 5px #F0A500;}
   50% { box-shadow:0px 0px 70px 5px  #111;}
   100%{box-shadow: 0px 0px 7px 5px  #F0A500;}
@@ -68,4 +70,4 @@ button{
   40% { color:  #555;}
   50% { color:  #555;}
   55%{color: #F0A500;}
-}
+} */
