--- a/style.css
+++ b/style.css
@@ -1,73 +1,10 @@
-
-body{
-    margin: 0px;
-    height: 100%;
-    position:fixed;
-    background-color: #334756;
-    background-image:linear-gradient(150deg,#334756,hsl(205, 18%, 13%));
-    
+.nav-dropdown{
+  display: none;
+  position: absolute;
+  right: 0px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  padding: 12px 0px;
+  z-index: 1;
 }
-.flex-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content:center;
-    
-}
-h1{
-    margin-top: 5%;
-    font-family:'Permanent Marker';
-    color:#F0A500;
-    animation-name: example2;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    transform:rotatez(-10deg);
-
-}
-button{
-    width: 250px;
-    padding: 10px;
-    margin: 10px;
-    
-    border: 1px  solid #F0A500;
-    
-    border-radius: 10px;
-    z-index:3;
-    font-size: large;
-    font-weight: 800;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: #F0A500;
-    background-color: #082032;
-    box-shadow: 0px 0px 5px 1px #F0A500;
-  
-}
-.bgcl{
-    background-image:linear-gradient(#082032,#082032,#000) ;
-    z-index: -1;
-    padding:60px 33px;
-    border-radius: 50%;   
-    overflow-y: hidden;
-    overflow-x: hidden;
-    box-shadow:0px 0px 7px 5px  #F0A500;
-    animation-name: example;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-}
-/* @keyframes example {
-    0%{ box-shadow: 0px 0px 7px 5px #F0A500;}
-  50% { box-shadow:0px 0px 70px 5px  #111;}
-  100%{box-shadow: 0px 0px 7px 5px  #F0A500;}
-}
-@keyframes example2 {
-    0%{color: #F0A500;}
-    5%{color: #F0A500;}
-    6%{color: #333;}
-    7%{color: #F0A500;}
-    8%{color: #333;}
-    9%{color: #F0A500;}
-    10%{color: #333;}
-    11%{color: #F0A500;}
-    12%{color: #333;}
-  40% { color:  #555;}
-  50% { color:  #555;}
-  55%{color: #F0A500;}
-} */
